--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SHAFAA PRINT</title>
-  
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -36,7 +35,7 @@
       </select>
 
       <label for="details">Additional Details:</label>
-<input type="text" id="details" name="details" required>
+      <input type="text" id="details" name="details" required>
 
       <label for="paymentMode">Payment Mode:</label>
       <select id="paymentMode" name="paymentMode" required onchange="toggleUPISection()">
@@ -46,15 +45,16 @@
 
       <!-- UPI Section -->
       <div id="upiSection" style="display: none;">
-        <p><NAME:</strong>FAAMIDHA MUSTAFA </p>
+        <p><strong>Name:</strong> FAAMIDHA MUSTAFA</p>
         <p><strong>Phone:</strong> 7200313800</p>
         <label for="paymentProof">Upload Payment Screenshot:</label>
         <input type="file" id="paymentProof" name="paymentProof" accept="image/*">
       </div>
 
-      <label for="fileUpload">Upload File (PDF, DOC, PPT):</label>
+      <label for="fileUpload">Upload File (PDF, DOC, PPT):</label><br>
       <input type="file" id="fileUpload" name="fileUpload" accept=".pdf,.doc,.ppt" required>
 
+      <p id="loadingMessage" style="display: none; color: blue;">Submitting your order...</p>
       <button type="submit">Print My Order</button>
     </form>
     <p id="responseMessage"></p>
@@ -68,20 +68,28 @@
     }
 
     document.getElementById('printOrderForm').addEventListener('submit', async function (event) {
-      event.preventDefault(); // Prevent page reload
+      event.preventDefault(); 
+      document.getElementById('loadingMessage').style.display = 'block';
       const formData = new FormData(this);
 
-     try {
-        const response = await fetch('https://your-backend-url.onrender.com/submitPrintOrder', {
+      try {
+        const response = await fetch('http://localhost:3002/submitPrintOrder', {
           method: 'POST',
           body: formData
         });
+
+        if (!response.ok) {
+          throw new Error(`Server Error: ${response.status}`);
+        }
+
         const result = await response.text();
         document.getElementById('responseMessage').innerText = result;
       } catch (error) {
-        document.getElementById('responseMessage').innerText = "Error submitting print order.";
+        document.getElementById('responseMessage').innerText = "❌ Error submitting print order.";
         console.error("Submission error:", error);
       }
+      
+      document.getElementById('loadingMessage').style.display = 'none';
     });
   </script>
 </body>
