--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       const formData = new FormData(this);
 
       try {
-        const response = await fetch('http://localhost:3002/submitPrintOrder', {
+        const response = await fetch('http://localhost:3002', {
           method: 'POST',
           body: formData
         });
